--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,6 +4,7 @@
 
 	// 👇 Features to add to the Dev Container. More info: https://containers.dev/implementors/features.
 	"features": {
+		"ghcr.io/meaningful-ooo/devcontainer-features/homebrew:2": {},
 		"ghcr.io/devcontainers/features/docker-in-docker:2": {},
 		"ghcr.io/prulloac/devcontainer-features/bun:1": {},
 		"ghcr.io/devcontainers/features/node:1": {},
@@ -30,7 +31,7 @@
 			"ppa": true,
 			"version": "latest"
 		}
-	}
+	},
 
 	// 👇 Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [],
@@ -40,4 +41,9 @@
 
 	// 👇 Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
 	// "remoteUser": "root"
+
+	"postAttachCommand": {
+//		"angularCLI": "npm install -g @angular/cli",
+		"springCLI": "brew tap spring-io/tap && brew install spring-boot"
+	}
 }
